[package]
name = "rofis"
version = "0.1.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A read-only, puny HTTP file server"
homepage = "https://github.com/sile/rofis"
repository = "https://github.com/sile/rofis"
readme = "README.md"
keywords = ["http"]
license = "MIT"
edition = "2018"

[badges]
travis-ci = {repository = "sile/rofis"}

[dependencies]
bytecodec = "0.4"
clap = "2"
daemonize = "0.3"
fibers = "0.1"
fibers_http_server = "0.1"
futures = "0.1"
httpcodec = "0.2"
mime_guess = "1"
slog = {version = "2", features = ["release_max_level_debug"]}
sloggers = "0.3"
trackable = "0.2"