[package]
name = "rofis"
version = "0.2.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A read-only, puny HTTP file server"
homepage = "https://github.com/sile/rofis"
repository = "https://github.com/sile/rofis"
readme = "README.md"
keywords = ["http"]
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
orfail = "0.1.2"
patricia_tree = "0.5.5"
