[package]
name = "rofis"
version = "0.3.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A read-only, puny HTTP file server"
homepage = "https://github.com/sile/rofis"
repository = "https://github.com/sile/rofis"
readme = "README.md"
keywords = ["http"]
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
daemonize = "0.5"
env_logger = "0.11.0"
log = "0.4.17"
mime_guess = "2.0.4"
orfail = "1"
patricia_tree = "0.8"
percent-encoding = "2.3.1"
url = "2.3.1"
